parser/src/snapshots/squawk_parser__parse__tests__alter_database_collation.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterDatabaseRefreshCollStmt(
                Object({
                    "dbname": String(
                        "pipelines",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                51,
            ),
        },
    ],
)
