parser/src/snapshots/squawk_parser__parse__tests__alter_enum_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterEnumStmt(
                    Object({
                        "newVal": String(
                            "orange",
                        ),
                        "newValIsAfter": Bool(
                            true,
                        ),
                        "newValNeighbor": String(
                            "red",
                        ),
                        "typeName": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "colors",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    49,
                ),
            },
        ),
    ],
)
