parser/src/snapshots/squawk_parser__parse__tests__alter_event_trigger_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterEventTrigStmt(
                    Object({
                        "tgenabled": String(
                            "D",
                        ),
                        "trigname": String(
                            "name",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
