parser/src/snapshots/squawk_parser__parse__tests__alter_extension_contents_stmt-2.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterExtensionContentsStmt(
                Object({
                    "action": Number(
                        1,
                    ),
                    "extname": String(
                        "hstore",
                    ),
                    "object": Object({
                        "ObjectWithArgs": Object({
                            "objargs": Array([
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            52,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "anyelement",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            64,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "hstore",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                            ]),
                            "objname": Array([
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "populate_record",
                                        ),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "objtype": String(
                        "OBJECT_FUNCTION",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                71,
            ),
        },
    ],
)
