parser/src/snapshots/squawk_parser__parse__tests__alter_foreign_data_wrapper.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterFdwStmt(
                Object({
                    "fdwname": String(
                        "dbi",
                    ),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "1",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_ADD",
                                ),
                                "defname": String(
                                    "foo",
                                ),
                                "location": Number(
                                    44,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "bar",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "drop",
                                ),
                                "location": Number(
                                    53,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                64,
            ),
        },
    ],
)
