parser/src/snapshots/squawk_parser__parse__tests__alter_op_class_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: RenameStmt(
                    RenameStmt {
                        newname: "new_name",
                        behavior: Restrict,
                        relation: None,
                        relation_type: AccessMethod,
                        rename_type: Opclass,
                        subname: None,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    64,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterOwnerStmt(
                    Object({
                        "newowner": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    124,
                                ),
                                "roletype": Number(
                                    1,
                                ),
                            }),
                        }),
                        "object": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "index_method",
                                    ),
                                }),
                            }),
                            Object({
                                "String": Object({
                                    "str": String(
                                        "name",
                                    ),
                                }),
                            }),
                        ]),
                        "objectType": Number(
                            24,
                        ),
                    }),
                ),
                stmt_location: 65,
                stmt_len: Some(
                    71,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterObjectSchemaStmt(
                    Object({
                        "newschema": String(
                            "new_schema",
                        ),
                        "object": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "index_method",
                                    ),
                                }),
                            }),
                            Object({
                                "String": Object({
                                    "str": String(
                                        "name",
                                    ),
                                }),
                            }),
                        ]),
                        "objectType": Number(
                            24,
                        ),
                    }),
                ),
                stmt_location: 137,
                stmt_len: Some(
                    71,
                ),
            },
        ),
    ],
)
